# phd-thesis-offlinefirstgov

./: LICENSE  README.md  generate_training_data.py
data/art_telecom_qos/: rural_lqe_trace_30days.csv
data/nasa_power_solar/: adamawa_solar_trace_30days.csv
simulations/dag_state_reconciliation/: generate_article2_figures.py  simulate_dag_dsr_simpy.py
simulations/energy_wall_analysis/: generate_paper_figures.py  simpy_drl_agent_survival_log.csv  simpy_static_node_death_log.csv  simulate_drl_battery_simpy.py
simulations/monte_carlo_security/: generate_article1_figures.py
testbed/: HARDWARE_SETUP.md
testbed/dag_dsr_engine/: HARDWARE_SETUP.md  generate_batch_payload.py  testbed_baseline_comparison.csv
testbed/ina219_metrology/: generate_dummy_traces.py  ina219_profiler.py  raw_trace_idle.csv  raw_trace_int8_inference.csv
testbed/python_drl_orchestrator/: dqn_policy_int8.tflite  drl_orchestrator.py
testbed/rust_l2_sequencer/src/: Cargo.toml  main.rs
